--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
-  background-color: #282c34;
+  background-color: #e3e3e3;
   min-height: 100vh;
+  padding: 12px;
 }
-
+/* #282c34 */
 .App-logo {
   height: 10vmin;
   pointer-events: none;
